# williamjphelps-monorepo

./: .prettierrc  README.md  package-lock.json  package.json
.github/workflows/: deploy-portfolio.yml
apps/api/: database.py  main.py  models.py  package.json  pyproject.toml
apps/api/routers/: auth.py  constants.py  dependencies.py  todos.py  utils.py
apps/portfolio/: README.md  package.json  tailwind.config.ts  tsconfig.json
apps/portfolio/.github/workflows/: deploy.yml
apps/portfolio/app/: globals.css  layout.tsx  page.tsx
apps/portfolio/app/common/: Header.tsx  ThemeButton.tsx
apps/portfolio/app/resume/: data.tsx  layout.tsx  page.tsx  types.tsx
apps/portfolio/app/resume/components/: ResumeEducation.tsx  ResumeExperiences.tsx  ResumeHeader.tsx  ResumeTechStack.tsx
apps/portfolio/hooks/: index.ts
apps/web/: README.md  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/(signed-in)/: layout.tsx
apps/web/app/todos/: page.tsx
apps/web/components/: Navbar.tsx  TodoCard.tsx
apps/web/services/: auth.ts  todos.ts  user.ts
apps/web/types/: index.ts
apps/web/utils/: Provider.tsx
apps/will-do-api/: .gitignore  main.py  models.py  package.json  pyproject.toml
apps/will-do-api/routers/: auth.py  dependencies.py  todos.py  users.py
apps/will-do-web/: package.json
apps/will-do-web/app/: page.tsx
apps/will-do-web/app/(signed-in)/todos/: page.tsx
apps/will-do-web/components/: CreateTodo.tsx  Profile.tsx  ViewTodos.tsx
